--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "license": "0BSD",
   "dependencies": {
-    "gatsby": "^4.24.5",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "gatsby": "^5.0.0-next.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
